# ai-job-assistant

./: .env  README.md  auth.py  db.py  main.py  models.py  pyproject.toml  schemas.py
services/: ai.py  scraper.py
