[project]
name = "ai-job-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "requests>=2.34.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "python-multipart>=0.0.28",
    "alembic>=1.18.4",
    "google-genai>=2.0.1",
    "typing>=3.10.0.0",
    "bs4>=0.0.2",
    "beautifulsoup4>=4.14.3",
    "bcrypt==4.0.1",
]
